# bees

./: .gitignore  CLAUDE.md  Cargo.toml  Trunk.toml  index.html
.github/workflows/: ci.yml  deploy.yml
.moth/: .current
.moth/doing/: eistp-low-difficulty_tuning_centralized_config.md  h6zr0-med-juice_collection_feedback_particles_and_animation.md  jp28z-high-allergy_meter_proximity_based_buildup_and_decay.md  nczfh-med-multiple_flower_heads_per_flower.md  nr7xz-high-render_static_scene_with_placeholder_shapes.md  ogi0o-med-ai_diva_companion_maintain_rizz_on_heads.md  uhbnu-high-pollen_dropping_from_flower_heads.md  urcg2-crit-project_scaffolding_bevy_wasm_setup_with_trunk.md
.moth/done/: exu2k-med-juice_sneeze_feedback_and_scatter.md  izwxf-high-core_game_state_structs_and_components.md  mj8hk-high-pollen_collection_with_collision_detection.md  mopeo-med-ai_healer_companion_reduce_player_allergy.md  w3vee-high-win_lose_conditions_and_restart_flow.md
.moth/ready/: 004-mgggc-high-flower_head_movement_patterns.md  008-jk16t-high-sneeze_mechanic_threshold_trigger_drop_pollen_reset.md  012-jz3s0-med-juice_allergy_warning_colors_and_visual_urgency.md  014-xczbp-med-stem_pollen_caches_with_higher_value.md  015-xaqbe-med-rizz_meter_per_flower_head_with_behavior_changes.md  016-wkzfw-med-cuteness_actions_wiggle_to_build_rizz.md  017-rnudp-med-attention_snap_heads_react_to_cache_collection.md  021-ulotm-low-mobile_touch_polish_and_viewport_scaling.md  022-a534o-low-session_timer_for_balance_testing.md
src/: lib.rs  main.rs
src/ai/: diva.rs  healer.rs  mod.rs
(+24 files in other folders)
